# chromium-legacy

./: .gitmodules  DEPS  PRESUBMIT.py  README.ja.md  README.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  crash-report.md
ash/: BUILD.gn
ash/constants/: ash_features.cc  ash_features.h  ash_pref_names.cc  ash_pref_names.h
ash/display/: window_tree_host_manager.cc
ash/session/: fullscreen_controller.cc  session_controller_impl_unittest.cc
ash/strings/: ash_strings_af.xtb  ash_strings_am.xtb  ash_strings_ar.xtb  ash_strings_as.xtb  ash_strings_az.xtb  ash_strings_be.xtb  ash_strings_bg.xtb  ash_strings_bn.xtb  ash_strings_bs.xtb  ash_strings_ca.xtb  ash_strings_cs.xtb  ash_strings_da.xtb  ash_strings_de.xtb  ash_strings_el.xtb  ash_strings_en-GB.xtb  ash_strings_es-419.xtb  ash_strings_es.xtb  ash_strings_et.xtb  ash_strings_eu.xtb  ash_strings_fa.xtb  ash_strings_fi.xtb  ash_strings_fil.xtb  (+58 more)
base/: BUILD.gn  check.h  check_op.h  enterprise_util_mac.mm  logging.cc  logging.h  native_library.cc  native_library.h  native_library_mac.mm  rand_util_posix.cc  scoped_generic.h  scoped_native_library.cc  scoped_native_library.h
build_overrides/: partition_alloc.gni
chrome/: BUILD.gn  VERSION  version.gni
chromeos/: chromeos_strings.grd
chromeos/services/assistant/public/proto/: BUILD.gn
components/: autofill_payments_strings.grdp
content/: BUILD.gn
crypto/: BUILD.gn  apple_keychain_v2.h  apple_keychain_v2.mm  unexportable_key_mac.mm
device/: BUILD.gn
net/: BUILD.gn
pdf/: pdf_view_plugin_base_unittest.cc
skia/: BUILD.gn
(+1533 files in other folders)
