# Copyright 2018 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# TODO(https://crbug.com/1164001): Before editing this file, please consider
# to use chromeos/ash/services/assistant/public/cpp/BUILD.gn instead.
# This is temporary during the migartion of assistant directories to ash.
# We keep it until internal assistant codes are changed to use the new path
# chromeos/ash/services/assistant.

import("//third_party/protobuf/proto_library.gni")

proto_library("proto") {
  visibility = [ "//chromeos/assistant/internal/*" ]
  proto_in_dir = "//"
  sources = [
    "about_me_settings_ui.proto",
    "activity_control_settings_common.proto",
    "activity_control_settings_ui.proto",
    "assistant_device_settings_ui.proto",
    "consent_flow_ui.proto",
    "email_opt_in_ui.proto",
    "gaia_user_context_ui.proto",
    "get_settings_ui.proto",
    "header.proto",
    "settings_ui.proto",
  ]
  deps = [ "//chromeos/ash/services/assistant/public/proto" ]
}
